--- a/front/textcare/src/app/globals.css
+++ b/front/textcare/src/app/globals.css
@@ -1,15 +1,3 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 html,
 body {
   max-width: 100vw;
@@ -17,9 +5,8 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: #433534;
+  font-family: Lato, Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -35,8 +22,100 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.page-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #fef3ea;
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.centered-div {
+  width: 375px;
+  height: 812px;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  justify-content: center;
+  display: flex;
+}
+
+.card {
+  background: #ffffff;
+  padding: 16px;
+  gap: 10px;
+}
+
+ul.provider {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.providerBox {
+  width: 327px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 25px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+
+h4 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+
+p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+
+p.small {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: left;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+}
+
+button {
+  padding: 12px 24px 12px 24px;
+  gap: 10px;
+  border-radius: 24px;
+  opacity: 0px;
+  background: #ffdecc;
+  border: 1px solid #f5b38e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+div.progress > hr {
+  border: none; /* Remove the default border */
+  border-top: 2px solid #6079a1; /* Create a colored line */
+  margin: 20px 0; /* Add spacing above and below */
+  width: 100%; /* Set the width (optional) */
 }
