--- a/front/textcare/src/app/globals.css
+++ b/front/textcare/src/app/globals.css
@@ -102,6 +102,7 @@ p.small {
 }
 
 button {
+  margin-top: 15px;
   padding: 12px 24px 12px 24px;
   gap: 10px;
   border-radius: 24px;
@@ -110,11 +111,4 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-div.progress > hr {
-  border: none;
-  border-top: 2px solid #6079a1;
-  margin: 20px 0;
-  width: 100%;
 }
