--- a/front/textcare/src/app/globals.css
+++ b/front/textcare/src/app/globals.css
@@ -101,8 +101,10 @@ p.small {
   text-decoration-skip-ink: none;
 }
 
-button {
+button,
+a.buttonLink {
   margin-top: 15px;
+  margin-bottom: 15px;
   padding: 12px 24px 12px 24px;
   gap: 10px;
   border-radius: 24px;
@@ -111,4 +113,6 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 16px;
+  font-weight: 700;
 }
