move up layout and add placeholder for conditions

--- a/front/textcare/src/app/globals.css
+++ b/front/textcare/src/app/globals.css
@@ -58,7 +58,7 @@ ul.provider {
   justify-content: space-around;
 }
 
-.providerBox {
+.onboardingBox {
   width: 327px;
   height: 100%;
   display: flex;
