--- a/front/textcare/src/app/globals.css
+++ b/front/textcare/src/app/globals.css
@@ -42,6 +42,8 @@ ul {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   justify-content: center;
   display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .card {
