--- a/front/textcare/src/app/globals.css
+++ b/front/textcare/src/app/globals.css
@@ -27,7 +27,7 @@ a {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #fef3ea;
+  background-color: #fafafa;
   margin: 0;
   flex-direction: column;
 }
